--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: npm install
-      - run: npm build
+      - run: npm run build
       - run: npm test
 
       - uses: jakejarvis/s3-sync-action@master
