New VITE created App and SAM template for S3 infrastructure.

--- a/template.yml
+++ b/template.yml
@@ -1,24 +1,25 @@
-
+# Based off material from here: https://aws.plainenglish.io/deploy-react-web-app-on-aws-s3-and-cloudfront-using-cloudformation-via-aws-sam-cli-409aa479063d
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
   SAM Template for React app hosted with S3 and CloudFront
 Resources:
-  WebAppS3Bucket:
+  # S3 bucket with public access blocked.
+  # Will only be accessible through CloudFront via policy
+  GithubActionsReactS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "${AWS::StackName}-web-app-s3-bucket"
+      BucketName: !Sub "${AWS::StackName}-github-actions-react-s3"
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
-
   # https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/private-content-restricting-access-to-s3.html
-  WebAppS3BucketPolicy:
+  GithubActionsReactS3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket: !Ref WebAppS3Bucket
+      Bucket: !Ref GithubActionsReactS3Bucket
       PolicyDocument:
         Id: PolicyForCloudFrontPrivateContent
         Version: "2012-10-17"
@@ -28,11 +29,10 @@ Resources:
             Principal:
               Service: cloudfront.amazonaws.com
             Action: s3:GetObject
-            Resource: !Sub "arn:aws:s3:::${AWS::StackName}-web-app-s3-bucket/*"
+            Resource: !Sub "arn:aws:s3:::${AWS::StackName}-github-actions-react-s3/*"
             Condition:
               StringEquals:
                 AWS:SourceArn: !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${CloudFrontDistribution}
-
   WebAppOriginAccessControl:
     Type: AWS::CloudFront::OriginAccessControl
     Properties:
@@ -41,14 +41,13 @@ Resources:
         OriginAccessControlOriginType: s3
         SigningBehavior: always
         SigningProtocol: sigv4
-
   CloudFrontDistribution:
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !GetAtt WebAppS3Bucket.RegionalDomainName
-            Id: !Sub "${AWS::StackName}-web-app-s3-origin"
+          - DomainName: !GetAtt GithubActionsReactS3Bucket.RegionalDomainName
+            Id: !Sub "${AWS::StackName}-github-actions-react-s3-origin"
             OriginAccessControlId: !GetAtt WebAppOriginAccessControl.Id
             S3OriginConfig: {}
         Enabled: "true"
@@ -58,11 +57,12 @@ Resources:
             - GET
             - HEAD
             - OPTIONS
-          TargetOriginId: !Sub "${AWS::StackName}-web-app-s3-origin"
+          TargetOriginId: !Sub "${AWS::StackName}-github-actions-react-s3-origin"
           CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6 # CachingOptimized
           OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf # CORS-S3Origin
           ViewerProtocolPolicy: redirect-to-https
         PriceClass: PriceClass_All
+# this is here because we need to return error control to the React app itself.
         CustomErrorResponses:
           - ErrorCode: 404
             ResponseCode: 200
@@ -70,12 +70,10 @@ Resources:
           - ErrorCode: 403
             ResponseCode: 200
             ResponsePagePath: /index.html
-
 Outputs:
   WebAppDomain:
     Value: !GetAtt CloudFrontDistribution.DomainName
   CloudFrontDistributionId:
     Value: !GetAtt CloudFrontDistribution.Id
-  WebAppS3BucketName:
-    Value: !Ref WebAppS3Bucket
-  view rawtemplate.yaml hosted with ❤ by GitHub
+  GithubActionsReactS3Bucket:
+    Value: !Ref GithubActionsReactS3Bucket
