--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,4 +30,4 @@ jobs:
       # sam build
       - run: sam build --use-container --build-image amazon/aws-sam-cli-build-image-nodejs20.x:latest
 
-      - run: sam deploy
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
