--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,3 +31,7 @@ jobs:
       - run: sam build --use-container --build-image amazon/aws-sam-cli-build-image-nodejs20.x:latest
 
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+
+      - name: Sync files to S3 bucket
+        run: |
+          aws s3 sync dist s3://github-actions-react-s3-github-actions-react-s3 --delete
