Triggering IaC build

--- a/aws-sam/template.yml
+++ b/aws-sam/template.yml
@@ -75,6 +75,7 @@ Resources:
             ResponseCode: 200
             ResponsePagePath: /index.html
 
+# Outputs shown by sam list
 Outputs:
   WebAppDomain:
     Value: !GetAtt CloudFrontDistribution.DomainName
