--- a/.github/workflows/sam-workflow.yml
+++ b/.github/workflows/sam-workflow.yml
@@ -24,5 +24,5 @@ jobs:
 
       # sam build
       - run: sam build --use-container --build-image amazon/aws-sam-cli-build-image-nodejs20.x:latest --config-file ${{ github.workspace }}/aws-sam/samconfig.toml --template-file ${{ github.workspace }}/aws-sam/template.yml
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --config-file ${{ github.workspace }}/aws-sam/samconfig.toml
 
