Renamed React Workflow and add manual trigger

--- a/.github/workflows/react-workflow.yml
+++ b/.github/workflows/react-workflow.yml
@@ -1,6 +1,7 @@
 name: React CI
 
 on:
+  workflow_dispatch:
   push:
     branches: ["main"]
     paths: ['public/**', 'src/**', 'package*.json', 'index.html']
