--- a/.github/workflows/sam-workflow.yml
+++ b/.github/workflows/sam-workflow.yml
@@ -3,8 +3,10 @@ name: IaC Pipeline
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
-    paths: ['aws-sam/**']
+    branches:
+      - main
+    paths:
+      - aws-sam/**
 
 jobs:
   build:
