Fix missing Typescript packages

--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -31,9 +31,8 @@ jobs:
       - name: Check template for errors
         run: | 
           cd ${{ github.workspace }}/cdk
+          npm ci
           cdk synth --require-approval=never --ci 
-          
-          
 
   deploy:
     if: github.ref_name == 'main'
