Make deployment conditional

--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -32,12 +32,9 @@ jobs:
         run: | 
           cd ${{ github.workspace }}/cdk
           npm ci
-          cdk synth --require-approval=never --ci 
+          cdk synth --require-approval=never --ci
 
-  deploy:
-    if: github.ref_name == 'main'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run CDK Deploy
+      - name: Deploy CDK Template
+        if: github.ref_name == 'main'
         run: |
-          cdk deploy --require-approval=never --ci
+          cdk deploy --require-approval=never --ci        
