Change Job name

--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -10,7 +10,7 @@ on:
       - cdk/**
 
 jobs:
-  validate:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
