Bugfix in pipeline

--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -37,4 +37,5 @@ jobs:
       - name: Deploy CDK Template
         if: github.ref_name == 'main'
         run: |
+          cd ${{ github.workspace }}/cdk
           cdk deploy --require-approval=never --ci        
