--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
 
 # testing
 /coverage
 
 # production
-/build
-/dist
+build/
+dist/
 
 # misc
 .DS_Store
@@ -23,5 +23,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/.idea
+.idea/
 
