--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,10 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": [
+      "@testing-library/jest-dom",
+      "vitest/globals"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,6 +24,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "./vitest.setup.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
