--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,6 @@
 FROM --platform=linux/amd64 amazoncorretto:22-alpine
 VOLUME /tmp
 COPY build/libs/demo-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8080
+
 ENTRYPOINT ["java","-jar","/app.jar"]
