--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demo
 management.endpoints.web.base-path=/
 
-management.endpoints.web.path-mapping.health=health
+management.endpoints.web.path-mapping.health=/health
