--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -3,8 +3,21 @@ name: React App Pipeline
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
-    paths: ['frontend/public/**', 'frontend/src/**', 'frontend/package*.json', 'frontend/index.html']
+    branches:
+      - main
+    paths:
+      - frontend/**
+
+  pull_request:
+    types: [ opened, reopened, synchronize ]
+    paths:
+      - frontend/index.html
+      - frontend/public/**
+      - frontend/src/**
+      - frontend/package*.json
+env:
+  FRONTEND_BASE_DIR: ./frontend/client
+  FRONTEND_DIST_DIR: ./frontend/client/dist
 
 jobs:
   build:
@@ -19,19 +32,20 @@ jobs:
           node-version: '20.12.x'
 
       - name: Restoring Frontend Packages
-        working-directory: ./frontend
+        working-directory: ${{ env.FRONTEND_BASE_DIR }}
         run: npm ci
 
       - name: Frontend Build
-        working-directory: ./frontend
+        working-directory: ${{ env.FRONTEND_BASE_DIR }}
         run: npm run build
 
       # no tests currently... restore if you want to run some
       - name: Run Test Suite
-        working-directory: ./frontend
+        working-directory: ${{ env.FRONTEND_BASE_DIR }}
         run: npm run test
 
       - name: Configure AWS Credentials
+        if: github.ref_name == 'main'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,5 +53,6 @@ jobs:
           aws-region: us-east-1
 
       - name: Sync files to S3 bucket
+        if: github.ref_name == 'main'
         run: |
-          aws s3 sync frontend/dist s3://gha-poc-stack-site-bucket --delete
+          aws s3 sync ${{ env.FRONTEND_DIST_DIR }} s3://gha-poc-stack-site-bucket --delete
