--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -20,6 +20,9 @@ env:
 jobs:
   build-job:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ env.SERVICES_BASE_DIR }}
 
     steps:
       - name: Checkout Code
@@ -32,7 +35,6 @@ jobs:
           java-version: 22
 
       - name: Build and Test
-        working-directory: ${{ env.SERVICES_BASE_DIR }}
         run: |
           ./gradlew clean test
 
@@ -40,6 +42,9 @@ jobs:
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs: ["build-job"]
+    defaults:
+      run:
+        working-directory: ${{ env.SERVICES_BASE_DIR }}
 
     steps:
       - name: Checkout Code
@@ -52,7 +57,6 @@ jobs:
           java-version: 22
 
       - name: Create Deployable Package
-        working-directory: ${{ env.SERVICES_BASE_DIR }}
         run: |
           ./gradlew bootJar
 
