--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -12,18 +12,22 @@ on:
     paths:
       - cdk/**
 
-jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+env:
+  CDK_BASE_DIR: ./cdk
 
-      - uses: actions/setup-node@v4
+jobs:
+  validate-template:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ env.CDK_BASE_DIR }}
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
+
+      - name: Configure Node
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
@@ -33,7 +37,40 @@ jobs:
 
       - name: Check template for errors
         run: | 
-          cd ${{ github.workspace }}/cdk
           npm ci
           cdk synth --require-approval=never --ci --all
+
+  deploy-infrastructure:
+    if: github.ref_name == 'main'
+    runs-on: ubuntu-latest
+    needs: ["build-job"]
+    defaults:
+      run:
+        working-directory: ${{ env.CDK_BASE_DIR }}
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
+
+      - name: Configure Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Setup CDK
+        run: |
+          npm install -g aws-cdk
+
+      - name: Initialze AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Check Deploy Template
+        run: |
+          npm ci
+          cdk deploy --require-approval=never --ci --all
+
 
