Fix broken job dependency

--- a/.github/workflows/cdk-workflow.yml
+++ b/.github/workflows/cdk-workflow.yml
@@ -43,7 +43,7 @@ jobs:
   deploy-infrastructure:
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
-    needs: ["build-job"]
+    needs: ["validate-template"]
     defaults:
       run:
         working-directory: ${{ env.CDK_BASE_DIR }}
