--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -40,7 +40,7 @@ jobs:
           ./gradlew clean test
 
   deploy-job:
-    if: github.ref_name == 'main'
+#    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs: ["build-job"]
     defaults:
