Trying to fix task-definition path

--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -93,7 +93,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ${{ env.SERVICES_BASE_DIR }}/task-definition.json
           container-name: ${{ env.DEPLOYMENT_STACKNAME }}-container
           image: ${{ steps.build-image.outputs.image }}
 
