--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -40,7 +40,7 @@ jobs:
           ./gradlew clean test
 
   deploy-job:
-#    if: github.ref_name == 'main'
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs: ["build-job"]
     defaults:
@@ -75,8 +75,6 @@ jobs:
       - name: Download task definition
         run: |
           aws ecs describe-task-definition --task-definition ${{ env.DEPLOYMENT_STACKNAME }}-task-defn --query taskDefinition > task-definition.json
-          pwd
-          ls -al task-definition.json
 
       - name: Build, tag, and push image to Amazon
         id: build-image
